# genet

./: LICENSE  README.md  pyproject.toml
src/genet/: solver.py
tests/: test_for_yue.py  test_solver.py
