[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "genet"
version = "0.1.0"
description = "Gene regulatory network inference with covariance dynamics"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Peng Zheng", email = "zhengp@uw.edu" },
]
dependencies = [
    "numpy<=1.24",
    "scipy==1.11.3",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
github = "https://github.com/zhengp0/genet"
